# imthedev

./: .gitignore  00_WORKFLOW_PLAN.md  CLAUDE.md  ORCHESTRATION_PLAN.md  README.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  TUI_DESIGN.md  demo_gemini_dashboard.py  pyproject.toml  quality_improvements_final_summary.md  test_pollution_fix_summary.md  tui_test_fixes_summary.md
.imthedev/: context.json  project.json
docs/: CURRENT_STATE.md  GEMINI_INTEGRATION.md  KNOWN_ISSUES.md  NEW_FEATURES.md  WORKING_ON.md
imthedev/: __init__.py  main.py
imthedev/app/: __init__.py  bootstrap.py
imthedev/core/: __init__.py  domain.py
imthedev/core/events/: __init__.py  bus.py  types.py
imthedev/core/interfaces/: __init__.py  services.py
imthedev/core/orchestration/: __init__.py  models.py
imthedev/core/services/: __init__.py  ai_orchestrator.py  claude_executor.py  command_engine.py  gemini_adapter.py  gemini_orchestrator.py  project_persistence.py  state_manager.py
imthedev/infrastructure/: __init__.py
imthedev/infrastructure/config/: __init__.py  config_manager.py
imthedev/infrastructure/events/: __init__.py  claude_events.py  command_events.py  feedback_events.py  gemini_events.py  orchestration_bus.py
imthedev/infrastructure/persistence/: __init__.py  context_repository.py  project_repository.py
imthedev/ui/: __init__.py
imthedev/ui/tui/: __init__.py  __main__.py  app.css  app.py  facade.py
imthedev/ui/tui/components/: __init__.py  approval_controls.py  command_dashboard.py  configuration_screen.py  project_selector.py  project_selector_v2.py  status_bar.py
tests/: __init__.py  conftest.py
tests/app/: __init__.py  test_bootstrap.py
tests/core/services/: __init__.py  test_ai_orchestrator.py  test_command_engine.py  test_gemini_adapter.py  test_project_persistence.py  test_state_manager.py
tests/infrastructure/config/: __init__.py  test_config_manager.py
tests/infrastructure/persistence/: __init__.py  test_context_repository.py  test_project_repository.py
tests/integration/: test_orchestration_flow.py
tests/ui/: __init__.py
tests/ui/tui/: __init__.py  test_app.py  test_facade.py  test_helpers.py  test_integration.py  test_isolation.py
tests/ui/tui/components/: __init__.py  test_approval_controls.py  test_command_dashboard.py  test_configuration_screen.py  test_project_selector.py  test_project_selector_crud.py  test_project_selector_v2.py  test_status_bar.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py  test_domain.py
tests/unit/core/events/: __init__.py  test_bus.py  test_types.py
tests/unit/core/interfaces/: __init__.py  test_services.py
tests/unit/core/orchestration/: test_models.py
tests/unit/core/services/: test_claude_executor.py  test_gemini_orchestrator.py
tests/unit/infrastructure/events/: test_orchestration_bus.py
